--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             </div>
             <div class="half-width">
-                <img class="first-image" src="Banner Image.png" alt="">
+                <img src="Banner Image.png" alt="">
             </div>
         </div>
     </header>
